--- a/EmployeeTraining/EmployeeTraining.csproj
+++ b/EmployeeTraining/EmployeeTraining.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>EmployeeTrainingProgram</AssemblyName>
     <Description>Introduces employee upgrades through exp and leveling.</Description>
-    <Version>2.3.3</Version>
+    <Version>2.4.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.0</LangVersion>
   </PropertyGroup>
@@ -53,6 +53,9 @@
     </Reference>
     <Reference Include="AYellowpaper.SerializedCollections">
       <HintPath>D:\SteamLibrary\steamapps\common\Supermarket Simulator\Supermarket Simulator_Data\Managed\AYellowpaper.SerializedCollections.dll</HintPath>
+    </Reference>
+    <Reference Include="ParadoxNotion">
+      <HintPath>D:\SteamLibrary\steamapps\common\Supermarket Simulator\Supermarket Simulator_Data\Managed\ParadoxNotion.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
